--- a/src/template/layout/default.njk
+++ b/src/template/layout/default.njk
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Title</title>
-    <meta name="description" content="template"/>
-    <meta name="keywords" content="template"/>
+    <title>Ем колбасу</title>
+    <meta name="description" content="Сайт Ем Колбасу"/>
+    <meta name="keywords" content="Сайт Ем Колбасу"/>
 
     {% block styles %}{% endblock %}
 </head>
