--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,8 +1,8 @@
 body {
-    font-family: SamsungOne, arial, sans-serif;
+    font-family: Roboto, arial, sans-serif;
     font-size: 10px;
     color: #000;
-    font-weight: 400;
+    font-weight: normal;
     font-style: normal;
     line-height: normal;
 
