--- a/src/template/layout/default.njk
+++ b/src/template/layout/default.njk
@@ -8,6 +8,10 @@
     <meta name="description" content="Сайт Ем Колбасу"/>
     <meta name="keywords" content="Сайт Ем Колбасу"/>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     {% block styles %}{% endblock %}
 </head>
 <body>
