--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,10 @@
 @import "reset";
 @import "variables";
 @import "base";
+
+@import "./components/header";
+@import "./components/main";
+@import "./components/footer";
+@import "./components/heading";
+@import "./components/filter";
+@import "./components/tile";
