--- a/src/template/pages/index.njk
+++ b/src/template/pages/index.njk
@@ -6,10 +6,13 @@
 
 {% block content %}
 
+    {% include './components/header.njk' %}
 
+    {% include './components/main.njk' %}
+
+    {% include './components/footer.njk' %}
 
 {% endblock %}
-
 
 {% block scripts %}
     <script src="../js/script.js"></script>    
