Add favicon and structure

--- a/src/template/pages/index.njk
+++ b/src/template/pages/index.njk
@@ -1,7 +1,7 @@
 {% extends "./layout/default.njk" %}
 
 {% block styles %}
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 {% endblock %}
 
 {% block content %}
@@ -15,5 +15,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="../js/script.js"></script>    
+    <script src="./js/script.js"></script>
 {% endblock %}
