--- a/src/template/components/header.njk
+++ b/src/template/components/header.njk
@@ -1,1 +1,10 @@
-<div class="header">HEADER</div>
+<header class="header">
+    <div class="header__container">
+        <div class="header__wrapper">
+            <div class="header__logo">
+                <img src="./images/logo/logo.png" alt="Логотип сайта">
+            </div>
+            <div class="header__name">Ем колбасу</div>
+        </div>
+    </div>
+</header>
