--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,4 +1,50 @@
 .header {
-    color: tomato;
-    font-size: 24px;
+    margin-bottom: 4rem;
+
+    @media screen and (max-width: 720px) {
+        margin-bottom: 2.5rem;
+    }
+
+    // .header__wrapper
+    &__wrapper {
+        padding: 1.5rem 2rem;
+        border-bottom: 1px solid #eee;
+        display: flex;
+        align-items: center;
+        gap: 0 1.5rem;
+
+        @media screen and (max-width: 720px) {
+            padding: 1rem 1.5rem;
+            gap: 0 1rem;
+        }
+    }
+
+    // .header__logo
+    &__logo {
+        width: 7.5rem;
+        height: 7.5rem;
+        overflow: hidden;
+
+        @media screen and (max-width: 720px) {
+            width: 5rem;
+            height: 5rem;
+        }
+
+        & img {
+            width: 100%;
+            height: 100%;
+            object-position: center;
+            object-fit: contain;
+        }
+    }
+
+    // .header__name
+    &__name {
+        font-size: 2.4rem;
+        color: #2c3e50;
+
+        @media screen and (max-width: 720px) {
+            font-size: 1.6rem;
+        }
+    }
 }
