--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,8 @@
 :root {
     --base-font-size: 10px;
+
+    --color-text-heading: #2c3e50;
+    --color-text-button: #333;
+    --color-text-active-button: #fff;
+    --color-text-tile: #666;
 }
