--- a/src/template/components/main.njk
+++ b/src/template/components/main.njk
@@ -1,3 +1,7 @@
-{% include './heading.njk' %}
-{% include './filter.njk' %}
-{% include './tile.njk' %}
+<main class="main">
+    <div class="main__container">
+        {% include './heading.njk' %}
+        {% include './filter.njk' %}
+        {% include './tile.njk' %}
+    </div>
+</main>
