--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,6 @@
 html {
     font-size: var(--base-font-size);
+    height: 100%;
 
     @media screen and (max-width: 1440px) {
         font-size: .69444444444444444444444444444444vw;
@@ -14,9 +15,16 @@ body {
     font-family: Roboto, arial, sans-serif;
     font-size: 1rem;
     color: #000;
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
     line-height: normal;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex: 1;
 }
 
 [class*="__container"] {
