--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -41,7 +41,7 @@
     // .header__name
     &__name {
         font-size: 2.4rem;
-        color: #2c3e50;
+        color: var(--color-text-heading);
 
         @media screen and (max-width: 720px) {
             font-size: 1.6rem;
