Add filter buttons

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,12 @@
     --base-font-size: 10px;
 
     --color-text-heading: #2c3e50;
-    --color-text-button: #333;
-    --color-text-active-button: #fff;
+    --color-text-gray-button: #333;
+    --color-text-blue-button: #fff;
     --color-text-tile: #666;
+
+    --bg-gray-button: #e9ecef;
+    --bg-hover-gray-button: #dee2e6;
+    --bg-blue-button: #3498db;
+    --bg-hover-blue-button: #2980b9;
 }
