--- a/src/template/components/filter.njk
+++ b/src/template/components/filter.njk
@@ -1,1 +1,13 @@
-FILTER
+{% set filterItems = [
+    'Магазины',
+    'Рецепты',
+    'Все для приготовления'
+] %}
+
+<div class="filter">
+    <button class="filter__btn filter__btn_active">Все</button>
+
+    {% for filterItem in filterItems %}
+        <button class="filter__btn">{{ filterItem }}</button>
+    {% endfor %}
+</div>
