--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,4 +10,7 @@
     --bg-hover-gray-button: #dee2e6;
     --bg-blue-button: #3498db;
     --bg-hover-blue-button: #2980b9;
+
+    --bg-footer: #2c3e50;
+    --color-footer-text: #fff;
 }
