--- a/src/template/components/footer.njk
+++ b/src/template/components/footer.njk
@@ -1,5 +1,11 @@
 <footer class="footer">
     <div class="footer__container">
-        FOOTER
+        <div class="footer__wrapper">
+            <div class="footer__copyright">&copy;&nbsp;<script>
+                    document.write(new Date().getFullYear())
+                </script>&nbsp;em-kolba.su. Все права защищены.</div>
+            <div class="footer__contacts">Контакты <a href="mailto:edosjoy@yandex.ru">edosjoy@yandex.ru</a></div>
+            <div class="footer__domain">Домен продается:<br>по всем вопросам обращайтесь на указанную почту</div>
+        </div>
     </div>
 </footer>
