--- a/src/template/components/main.njk
+++ b/src/template/components/main.njk
@@ -2,6 +2,16 @@
     <div class="main__container">
         {% include './heading.njk' %}
         {% include './filter.njk' %}
-        {% include './tile.njk' %}
+        <div class="main__tiles">
+            {% include './tile.njk' %}
+            {% include './tile.njk' %}
+            {% include './tile.njk' %}
+            {% include './tile.njk' %}
+            {% include './tile.njk' %}
+            {% include './tile.njk' %}
+            {% include './tile.njk' %}
+            {% include './tile.njk' %}
+            {% include './tile.njk' %}
+        </div>
     </div>
 </main>
