--- a/src/template/components/tile.njk
+++ b/src/template/components/tile.njk
@@ -1,1 +1,10 @@
-TILE
+<div class="tile">
+    <div class="tile__image">
+        <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+    </div>
+    <div class="tile__description">
+        <h2 class="tile__heading">Мясоделие</h2>
+        <div class="tile__text">Товары для производства колбас</div>
+        <a href="" class="tile__button" target="_blank">Перейти</a>
+    </div>
+</div>
