--- a/src/template/components/heading.njk
+++ b/src/template/components/heading.njk
@@ -1,1 +1,1 @@
-<h1 class="main-heading">Полезные сайты про колбасы: <br>продажа, рецепты, производство</h1>
+<h1 class="main-heading">Полезные сайты про колбасы: <br>магазины, рецепты, производство</h1>
