Add categories on a tile. Change any css styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,8 @@
     --color-text-heading: #2c3e50;
     --color-text-gray-button: #333;
     --color-text-blue-button: #fff;
-    --color-text-tile: #666;
+    --color-text-tile: #000;
+    --color-text-categories: #666;
 
     --bg-gray-button: #e9ecef;
     --bg-hover-gray-button: #dee2e6;
