--- a/src/template/components/tile.njk
+++ b/src/template/components/tile.njk
@@ -3,6 +3,11 @@
         <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
     </div>
     <div class="tile__description">
+        <div class="tile__categories">
+            <div class="tile__categories-item">#Рецепты</div>
+            <div class="tile__categories-item">#Все для приготовления</div>
+            <div class="tile__categories-item">#Магазины колбас</div>
+        </div>
         <h2 class="tile__heading">Мясоделие</h2>
         <div class="tile__text">Товары для производства колбас</div>
         <a href="" class="tile__button" target="_blank">Перейти</a>
