--- a/src/styles/components/_tile.scss
+++ b/src/styles/components/_tile.scss
@@ -41,16 +41,28 @@
         padding: 2rem;
     }
 
+    &__categories {
+        display: flex;
+        gap: .5rem;
+        flex-wrap: wrap;
+        margin-bottom: 1rem;
+
+        &-item {
+            color: var(--color-text-categories);
+            font-size: 1.2rem;
+        }
+    }
+
     // .tile__heading
     &__heading {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         color: var(--color-text-heading);
         margin-bottom: 1rem;
     }
 
     // .tile__text
     &__text {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         color: var(--color-text-tile);
         margin-bottom: 1.5rem;
     }
@@ -64,5 +76,11 @@
         border-radius: .5rem;
         padding: .8rem 1.6rem;
         text-align: center;
+
+        @media screen and (hover:hover) {
+            &:hover {
+                background-color: var(--bg-hover-blue-button);
+            }
+        }
     }
 }
