Add js - add filter buttons

--- a/src/template/components/filter.njk
+++ b/src/template/components/filter.njk
@@ -4,7 +4,7 @@
     'Все для приготовления'
 ] %}
 
-<div class="filter">
+<div class="filter js-filter">
     <button class="filter__btn filter__btn_active">Все</button>
 
     {% for filterItem in filterItems %}
