--- a/src/template/components/main.njk
+++ b/src/template/components/main.njk
@@ -13,5 +13,6 @@
             {% include './tile.njk' %}
             {% include './tile.njk' %}
         </div>
+        {% include './text.njk' %}
     </div>
 </main>
