--- a/src/styles/components/_tile.scss
+++ b/src/styles/components/_tile.scss
@@ -2,10 +2,12 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 3rem 4.5rem;
+    margin-bottom: 4rem;
 
     @media screen and (max-width: 720px) {
         grid-template-columns: 1fr;
         gap: 3rem 0;
+        margin-bottom: 2rem;
     }
 }
 
