Add js - add site tiles

--- a/src/template/components/main.njk
+++ b/src/template/components/main.njk
@@ -2,7 +2,7 @@
     <div class="main__container">
         {% include './heading.njk' %}
         {% include './filter.njk' %}
-        <div class="main__tiles">
+        <div class="main__tiles js-tiles-list">
             {% include './tile.njk' %}
             {% include './tile.njk' %}
             {% include './tile.njk' %}
