--- a/src/styles/components/_tile.scss
+++ b/src/styles/components/_tile.scss
@@ -15,7 +15,7 @@
     max-width: 37rem;
     width: 100%;
     border-radius: 1rem;
-    box-shadow: 5px -5px 15px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 5px -5px 25px 10px rgba(0, 0, 0, .15);
 
     // .tile__image
     &__image {
@@ -48,6 +48,11 @@
         gap: .5rem;
         flex-wrap: wrap;
         margin-bottom: 1rem;
+        height: 3.5rem;
+
+        @media screen and (max-width: 720px) {
+            height: auto;
+        }
 
         &-item {
             color: var(--color-text-categories);
@@ -67,6 +72,11 @@
         font-size: 1.4rem;
         color: var(--color-text-tile);
         margin-bottom: 1.5rem;
+        height: 7rem;
+
+        @media screen and (max-width: 720px) {
+            height: auto;
+        }
     }
 
     // .tile__button
